Fix dropdown z-index issue

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -151,14 +151,12 @@ svg {
 
 .services-h2 {
   color: white;
-  z-index: 1;
   position: relative;
 }
 
 .service-section {
   margin-bottom: 71px;
   position: relative;
-  z-index: 1;
 }
 
 .service-item img {
@@ -169,7 +167,6 @@ svg {
   margin-top: 10px;
   margin-bottom: 30px;
   min-width: 130px;
-  z-index: 100;
 }
 
 .service-section ul {
